# otus_c_plus_hw6

./: .gitignore  README.md
.github/workflows/: run_hw6.yml
hm6/: CMakeLists.txt  CMakePresets.json  main.cpp  version.h.in
hm6/src/: Matrix.hpp  MatrixValueType.hpp  Point.cpp  Point.hpp
